fixed namespacing

--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -10,7 +10,7 @@ header {
 }
 
 nav {
-    width: 100%;
+    width: 90vw;
 }
 
 nav ul{
