--- a/styles/styles.css
+++ b/styles/styles.css
@@ -326,7 +326,7 @@ header {
 }
 
 nav {
-  width: 100%;
+  width: 90vw;
 }
 
 nav ul {
@@ -475,7 +475,7 @@ h1 {
 .contact p {
   width: 60%;
   margin: 0 auto;
-  padding: 25px 0;
+  padding-top: 20px;
   text-transform: none;
 }
 
@@ -551,7 +551,7 @@ form button {
 .emailPhone a {
   color: black;
   text-decoration: none;
-  padding: 10px;
+  padding: 5px;
 }
 
 .about {
@@ -559,19 +559,30 @@ form button {
   background: -webkit-gradient(linear, left top, left bottom, from(#131212), color-stop(0%, #efdbd0), color-stop(96%, #ffbd81));
   background: linear-gradient(180deg, #131212 0%, #efdbd0 0%, #ffbd81 96%);
   text-align: center;
-  padding: 10%;
+  padding: 5% 0 0 0;
+}
+
+.aboutContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .about p {
   text-transform: none;
   text-align: left;
   font-weight: 300;
+  width: 50%;
+  padding: 5% 0 5% 25px;
   line-height: 30px;
 }
 
 .aboutPhoto {
   margin: 0 auto;
-  width: 70%;
+  width: 50%;
   border-radius: 50%;
   padding: 5% 0;
 }
@@ -681,12 +692,20 @@ form button {
 }
 
 @media (max-width: 768px) {
+  .aboutContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
   .aboutPhoto {
     width: 75%;
   }
 
   .about p {
     font-size: 1.6rem;
+    width: 100%;
   }
 
   h1 {
